[package]
name = "geyser-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
agave-geyser-plugin-interface = "3.0.10"
agave-logger = { version = "=3.1.0-beta.0", features = ["agave-unstable-api"] }
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = "0.38.0"
lazy_static = "1.4"